@@ -1,3 +1,12 @@
+2002-06-06  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* configure.in: remove gcc 2.91 check
+	* make.common.in: use -Werror even for gcc 2.91
+	* gui/oprof_start.cpp:
+	* libutil++/op_bfd.cpp:
+	* pp/derive_files.cpp:
+	* pp/op_to_source.cpp: small tweak for gcc 2.91 and -Werror
+
 2002-06-06  John Levon  <moz@compsoc.man.ac.uk>
 
 	* module/op_rtc.c: use check_range
